correcion workflow list

--- a/src/app/communications/presentation/pages/inbox-detail/inbox-detail.component.html
+++ b/src/app/communications/presentation/pages/inbox-detail/inbox-detail.component.html
@@ -57,7 +57,7 @@
           } }
         </mat-tab>
         <mat-tab label="Flujo de trabajo">
-          <workflow-list [workflow]="workflow()" />
+          <workflow-paths [workflow]="workflow()" />
         </mat-tab>
         <mat-tab label="Flujo de trabajo grafico">
           <workflow-graph [workflow]="workflow()" />
