--- a/src/app/communications/presentation/pages/inbox/inbox.component.html
+++ b/src/app/communications/presentation/pages/inbox/inbox.component.html
@@ -191,16 +191,16 @@
               <mat-icon>send</mat-icon>
               <span>Remitir</span>
             </button>
-
             <button mat-menu-item (click)="archive([row])">
               <mat-icon>archive</mat-icon>
               Archivar
             </button>
-            <button (click)="generateRouteMap(row)" mat-menu-item>
+           
+            }
+             <button (click)="generateRouteSheet(row)" mat-menu-item>
               <mat-icon>description</mat-icon>
               <span>Hoja de ruta</span>
             </button>
-            }
           </mat-menu>
         </td>
       </ng-container>
