correcion generacion hoja de ruta

--- a/src/app/communications/presentation/pages/outbox/outbox.component.html
+++ b/src/app/communications/presentation/pages/outbox/outbox.component.html
@@ -151,6 +151,10 @@
               <mat-icon>delete</mat-icon>
               <span>Cancelar</span>
             </button>
+            <button (click)="generateRouteSheet(item)" mat-menu-item>
+              <mat-icon>description</mat-icon>
+              <span>Hoja de ruta</span>
+            </button>
           </mat-menu>
         </td>
       </ng-container>
