--- a/src/app/procedures/presentation/pages/externals-manage/externals-manage.component.html
+++ b/src/app/procedures/presentation/pages/externals-manage/externals-manage.component.html
@@ -86,7 +86,7 @@
             <mat-icon>send</mat-icon>
             <span>Remitir </span>
           </button>
-          <button mat-menu-item (click)="generateRouteMap(row)">
+          <button mat-menu-item (click)="generateRouteSheet(row)">
             <mat-icon>feed</mat-icon>
             <span>Hoja de ruta</span>
           </button>
