--- a/src/app/layout/presentation/pages/home/home.component.html
+++ b/src/app/layout/presentation/pages/home/home.component.html
@@ -4,6 +4,9 @@
       <mat-icon>menu</mat-icon>
     </button>
     <span class="flex-1"></span>
+    <button mat-icon-button routerLink="/home/resources">
+      <mat-icon>open_in_new</mat-icon>
+    </button>
     <div class="relative ml-2">
       <button
         mat-icon-button
